fixed off-center hihglight on menu

--- a/services/frontend-v3/src/App.css
+++ b/services/frontend-v3/src/App.css
@@ -274,8 +274,12 @@ a.ant-btn.ant-btn-link.ant-btn-block:focus {
 }
 
 button.ant-btn.ant-btn-link:focus {
-  background-color: #08bab462;
-  color: #001c1a;
+  background-color: #415a5a;
+
+  box-shadow: 0px 18px #415a5a, 0px 7px #415a5a;
+  padding-top: 20px;
+  padding-bottom: 0px;
+  border-radius: 20px;
 }
 
 button.ant-btn.ant-btn-dangerous:focus {
